# tallerEstructura

./: App.cpp  App.h  AppAtributos.cpp  AppAtributos.h  AppComander.cpp  AppComander.h  CMakeLists.txt  Comando.cpp  Comando.h  Comandos.cpp  EjecutarApp.h  ListaApp.cpp  ListaApp.h  ListaUsuarios.cpp  ListaUsuarios.h  LogCommand.cpp  LogCommand.h  Login.cpp  Login.h  README.md  Usuario.cpp  Usuario.h  main.cpp
